home landing page add redirects using turbolinks due to issue on safari and other fixes

--- a/app/assets/stylesheets/backend/reservation.css.scss
+++ b/app/assets/stylesheets/backend/reservation.css.scss
@@ -1,5 +1,5 @@
 .reservation-page {
-    margin-top: 100px;
+    margin-top: 120px;
 }
 .reservation-page .Polaris-DataTable__Cell {
     padding: 1.6rem 1rem;
